# pcre-to-cpp

./: .gitignore  README.md  benchmark.py  benchmark_common.py  benchmark_wikitext.py  benchmarks.yaml  config.yaml  design.md  main.py  pcre_to_cpp.py  pyproject.toml  run.py  run_benchmark.py  run_tests.py  test.py  tests.json  tests.yaml
examples/: bailingmoe.cpp  gpt2.cpp  gpt4o.cpp  llama3.cpp  tekken.cpp
staging/: CMakeLists.txt  unicode.cpp
test-harness/: CMakeLists.txt  benchmark.cpp  main.cpp  test-main.cpp  unicode-split.cpp  unicode-split.h  unicode.h
test-harness/inputs/: benchmark.yaml  chinese.yaml  code.yaml  edge_cases.yaml  math.yaml  natural_language.yaml  unicode.yaml
